correction of the loader text not visible on chrome and derivatives

--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,7 @@ section.menu-container > .menu__ordering:hover {
   animation: rotation 0.5s backwards infinite;
   background-image: linear-gradient(to left, #9356DC, #FF79DA, #99E2D0);
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
 }
 
