--- a/sass/components/_loading-spinner.scss
+++ b/sass/components/_loading-spinner.scss
@@ -20,6 +20,7 @@
             $tertiary-color
         );
         background-clip: text;
+        -webkit-background-clip: text;
         color: transparent;
     }
 }
